implemented diode activity

--- a/app/src/main/res/layout/activity_diode.xml
+++ b/app/src/main/res/layout/activity_diode.xml
@@ -1,9 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:custom="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.descon.work.dmm.activities.measurementActivities.Level3.DiodeActivity">
+
+    <RelativeLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/diode_gaugeLayout"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <com.descon.work.dmm.displayAndVisualisationClasses.Speedometer
+            android:id="@+id/diode_gauge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            custom:currentSpeed="3"
+            custom:maxSpeed="12"
+            custom:scaleTextSize="10dp" />
+
+    </RelativeLayout>
+
+    <TextView
+        android:id="@+id/diode_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/diode_gaugeLayout"
+        android:text="MODE:"
+        android:textSize="15dp"
+        app:layout_constraintLeft_toLeftOf="@+id/diode_gaugeLayout"
+        app:layout_constraintTop_toBottomOf="@+id/diode_gaugeLayout"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintTop_creator="1" />
+
+    <Button
+        android:id="@+id/diode_dtmMode_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
+        android:onClick="onClickDTM"
+        android:text="DTM MODE"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1" />
+
+    <Button
+        android:id="@+id/diode_zdtMode_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:layout_marginEnd="11dp"
+        android:onClick="onClickZDT"
+        android:text="ZDT MODE"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintRight_creator="1" />
 
 </android.support.constraint.ConstraintLayout>
